--- a/src/views/placeOrder.html
+++ b/src/views/placeOrder.html
@@ -1,19 +1,3 @@
-<style>
-    .ng-invalid {
-        background-color: lightpink;
-    }
-
-    .ng-valid {
-        background-color: lightgreen;
-    }
-
-    span.error {
-        color: red;
-        font-weight: bold;
-    }
-
-</style>
-
 <h2>Check out now</h2>
 <p>Please enter your details, and we'll ship your goods right away!</p>
 
@@ -40,7 +24,7 @@
 
         <div class="form-group">
             <label>City</label>
-            <input name="city" class="form-control" ng-model="shippingForm.data.shipping.city" required/>
+            <input name="city" class="form-control" ng-model="sportsStoreCtrl.data.shipping.city" required/>
             <span class="error" ng-show="shippingForm.city.$error.required">
                 Please enter a city
             </span>
@@ -48,37 +32,39 @@
 
         <div class="form-group">
             <label>State</label>
-            <input name="state" class="form-control" ng-model="shippingForm.data.shipping.state" required/>
+            <input name="state" class="form-control" ng-model="sportsStoreCtrl.data.shipping.state" required/>
             <span class="error" ng-show="shippingForm.state.$error.required">
                 Please enter a state
             </span>
         </div>
         <div class="form-group">
             <label>Zip</label>
-            <input name="zip" class="form-control" ng-model="data.shipping.zip" required />
+            <input name="zip" class="form-control" ng-model="sportsStoreCtrl.data.shipping.zip" required/>
                 <span class="error" ng-show="shippingForm.zip.$error.required">
                     Please enter a zip code
                 </span>
         </div>
         <div class="form-group">
             <label>Country</label>
-            <input name="country" class="form-control"
-                   ng-model="data.shipping.country" required/>
-<span class="error" ng-show="shippingForm.country.$error.required">
-Please enter a country
-</span>
+            <input name="country" class="form-control" ng-model="sportsStoreCtrl.data.shipping.country" required/>
+            <span class="error" ng-show="shippingForm.country.$error.required">
+                Please enter a country
+            </span>
         </div>
         <h3>Options</h3>
 
         <div class="checkbox">
             <label>
                 <input name="giftwrap" type="checkbox"
-                       ng-model="data.shipping.giftwrap"/>
+                       ng-model="shippingForm.data.shipping.giftwrap"/>
                 Gift wrap these items
             </label>
         </div>
         <div class="text-center">
-            <button ng-disabled="shippingForm.$invalid" class="btn btn-primary">Complete order</button>
+            <button ng-disabled="shippingForm.$invalid" class="btn btn-primary"
+                    ng-click="sportsStoreCtrl.sendOrder(sportsStoreCtrl.data.shipping)">
+                Complete order
+            </button>
         </div>
     </div>
 </form>
