--- a/src/views/adminLogin.html
+++ b/src/views/adminLogin.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="well" ng-controller="AuthCtrl as authCtrl">
+    <div class="alert alert-info" ng-hide="authCtrl.authenticationError">
+        Enter your username and password and click Log In to authenticate
+    </div>
+    <div class="alert alert-danger" ng-show="authCtrl.authenticationError">
+        Authentication Failed ({{authCtrl.authenticationError.status}}). Try again.
+    </div>
+    <form name="authForm" novalidate>
+        <div class="form-group">
+            <label>Username</label>
+            <input name="username" class="form-control" ng-model="username" required />
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input name="password" type="password" class="form-control"
+                   ng-model="password" required />
+        </div>
+        <div class="text-center">
+            <button ng-click="authCtrl.authenticate(username, password)"
+                    ng-disabled="authForm.$invalid"
+                    class="btn btn-primary">
+                Log In
+            </button>
+        </div>
+    </form>
+</div>
