--- a/src/views/adminProducts.html
+++ b/src/views/adminProducts.html
@@ -1,3 +1,63 @@
-<div class="well">
-    This is the product view
+<style>
+    #productTable {
+        width: auto;
+    }
+
+    #productTable td {
+        max-width: 150px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+    #productTable td input {
+        max-width: 125px;
+    }
+</style>
+<div ng-controller="ProductCtrl as productCtrl">
+    <table id="productTable" class="table table-striped table-bordered">
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Category</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+        <tr ng-repeat="item in productCtrl.products" ng-hide="item.id == productCtrl.editedProduct.id">
+            <td>{{item.name}}</td>
+            <td class="description">{{item.description}}</td>
+            <td>{{item.category}}</td>
+            <td>{{item.price | currency}}</td>
+            <td>
+                <button ng-click="productCtrl.startEdit(item)" class="btn btn-xs btn-primary">
+                    Edit
+                </button>
+                <button ng-click="productCtrl.deleteProduct(item)" class="btn btn-xs btn-primary">
+                    Delete
+                </button>
+            </td>
+        </tr>
+        <tr ng-class="{danger: productCtrl.editedProduct}">
+            <td><input ng-model="productCtrl.editedProduct.name" required /></td>
+            <td><input ng-model="productCtrl.editedProduct.description" required /></td>
+            <td><input ng-model="productCtrl.editedProduct.category" required/></td>
+            <td><input ng-model="productCtrl.editedProduct.price" required/></td>
+            <td>
+                <button ng-hide="productCtrl.editedProduct.id"
+                        ng-click="productCtrl.createProduct(productCtrl.editedProduct)"
+                        class="btn btn-xs btn-primary">
+                    Create
+                </button>
+                <button ng-show="productCtrl.editedProduct.id"
+                        ng-click="productCtrl.updateProduct(productCtrl.editedProduct)"
+                        class="btn btn-xs btn-primary">
+                    Save
+                </button>
+                <button ng-show="productCtrl.editedProduct"
+                        ng-click="productCtrl.cancelEdit()" class="btn btn-xs btn-primary">
+                    Cancel
+                </button>
+            </td>
+        </tr>
+    </table>
 </div>
